# cqbg

./: .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md
include/: AnsiColors.hpp  ArgsParse.hpp  Base16Colors.hpp  ColorWindow.hpp  Parsei3status.hpp  XCBRootImage.hpp
src/: ArgsParse.cpp  ColorWindow.cpp  Parsei3status.cpp  XCBRootImage.cpp  main.cpp
